examples/pass/closures/hof.dew
// expect: 42
// Tier: Small
// Higher-order function: chain function calls.
def mul3 = fn(x: Int) -> Int { x * 3 };
def add3 = fn(x: Int) -> Int { x + 3 };
def main = fn { add3(mul3(13)) -> stdout; };
